Votes table implemented

--- a/principal.html
+++ b/principal.html
@@ -54,7 +54,7 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#home" class="smoothScroll">Votación</a></li>
-                         <li><a href="#feature" class="smoothScroll">Resultados</a></li>
+                         <li><a href="#about" class="smoothScroll">Resultados</a></li>
                     </ul>
                </div>
 
@@ -70,34 +70,6 @@
           </div>
      </section>
 
-
-     <!-- FEATURE -->
-     <section id="feature" data-stellar-background-ratio="0.5">
-          <div class="container" id="container-lista-grupos">
-               <div class="row">
-                    <div class="col-md-offset-3 col-md-6 col-sm-12">
-                         <div class="home-info">
-                              <form action="" method="get" class="online-form">
-                                   <h3 style="color: #5c6c7c;">ID Grupo</h3>
-                                   <input type="text" name="user" id="id-grupo" class="form-control" placeholder="Ingresar el ID del Grupo" required>
-                                   <br><br><h3 style="color: #5c6c7c;">Fotografía</h3>
-                                   <div class="pricing-bottom">
-                                        <button type="button" class="section-btn pricing-btn" onclick="promptFilenameGrupo()" style="left: 205px;">Cargar</button>
-                                   </div>
-                                   <div class="pricing-bottom" style="padding-top: 50px;">
-                                         <img id="img-grupo"> </img>
-                                   </div>
-                                   <br>
-                                   <input type="button" onclick="registrarGrupo()" class="form-control" name="ingresar grupo" value="Registrar" style="background-color: #29ca8e; color: white; border: 0; box-shadow: none;">
-                              </form>
-                         </div>
-                    </div>
-               </div>
-               <br><br>
-          </div>
-     </section>
-
-     
      <!-- ABOUT -->
      <section id="about" data-stellar-background-ratio="0.5">
           <div class="container" id="container-lista-asistencias">
