Vident and blind views

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/tooplate-style.css">
+     
 
 </head>
 <body>
@@ -47,6 +48,7 @@
                     <!-- LOGO TEXT HERE -->
                     <a href="index.html" class="navbar-brand">
                          <img src="images/eGeGuate.png" alt="eGeGuate" height="125">
+                         <audio id="audio" src="https://bucket-proyecto-ss1.s3.us-east-2.amazonaws.com/Audios/0.mp3" hidden="true"></audio>
                     </a>
                </div>
 
