--- a/principal-vidente.html
+++ b/principal-vidente.html
@@ -86,6 +86,6 @@
      <script src="js/smoothscroll.js"></script>
      <script src="js/custom.js"></script>
 
-     <script src="js/students.js"></script>
+     <script src="js/vidente.js"></script>
 </body>
 </html>
