--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
      </section>
 
 
+     <!-- Modal -->
+     <div id="myModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+     
+          <!-- Modal content-->
+          <div class="modal-content">
+          <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+               <h4 class="modal-title">Vidente</h4>
+          </div>
+          <div class="modal-body">
+               <p>Si eres vidente, presiona el botón.</p>
+          </div>
+          <div class="modal-footer">
+               <button type="button" class="btn btn-default" data-dismiss="modal" onclick="iniciarSesionVidente()">Soy vidente</button>
+          </div>
+          </div>
+     
+          </div>
+     </div>
+
      <!-- FEATURE -->
      <section id="home" data-stellar-background-ratio="0.5">
           <div class="overlay"></div>
